Bug fix hide overflow-x of all elements

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,11 +17,11 @@ img {
 }
 body {
   font-family: "Bai Jamjuree", sans-serif;
-  // font-family:  sans-serif;
-  // padding: 1rem;
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
+   & > *{
+    overflow-x: hidden;
+   }
 }
 
 ul {
